<resources>
    <string name="app_name">Bagelly</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="shops">Shops</string>
    <string name="sell">Sell</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="login_in_to_your_account">Login in to your account</string>
    <string name="forexample_gmail_com">forexample@gmail.com</string>
    <string name="reset">Reset</string>
    <string name="name">Name</string>
    <string name="fill_in_the_details_to_create_account">Fill in the details to create an account</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_having_an_account">Already having an account?</string>
    <string name="search_products_by_title_keyword_or_category">Search products by title, keyword or category</string>
    <string name="categories">Categories</string>
    <string name="home_furniture">Home Furniture</string>
    <string-array name="vehicles">
        <item>Buses and minibuses</item>
        <item>Cars</item>
        <item>Heavy equipment</item>
        <item>Motorcycles and scooters</item>
        <item>Trucks and trailers</item>
        <item>Vehicle parts and accessories</item>
        <item>Watercraft and boats</item>
    </string-array>
    <string-array name="fashion">
        <item>Bags</item>
        <item>Clothing</item>
        <item>Clothing accessories</item>
        <item>Jewelry</item>
        <item>Shoes</item>
        <item>Watches</item>
        <item>Wedding wear and accessories</item>
    </string-array>
    <string name="agriculture_amp_food"><![CDATA[Agriculture & food]]></string>
    <string name="recently_uploaded_items">Recently uploaded items</string>
    <string name="recent">Recent</string>
    <string name="robert_muriithi">Robert Muriithi</string>
    <string name="animals_and_pets">Animals and pets</string>
    <string name="select_a_category">Select a category</string>
    <string name="select_a_sub_category">Select a sub-category</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub-category</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="step_2_0f_2">Step 2 0f 2</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="logout">LOGOUT</string>
    <string name="settings">Settings</string>
    <string name="manage_my_account">Manage My Account</string>
    <string name="my_cart">My cart</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">Feedback</string>
    <string name="my_settings">MY SETTINGS</string>
    <string name="details">Details</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="tecno_mobile">Tecno Mobile</string>
    <string name="nairobi_kenya">Nairobi, Kenya</string>
    <string name="edit_profile">Edit</string>
    <string name="electronic_shops">Electronic Shops</string>
    <string name="home_and_living_stores">Home and Living Stores</string>
    <string name="mobile_phones_shops">Mobile Phones Shops</string>
    <string name="fashion_shops_amp_stores"><![CDATA[Fashion Shops & Stores]]></string>
    <string name="motocycle_amp_vehicle_dealers"><![CDATA[Motocycle & Vehicle Dealers]]></string>
    <string name="general_stores">General Stores</string>
    <string name="service_providers">Service Providers</string>
    <string name="my_advertisements">My Advertisements</string>
    <string name="first_name">First Name</string>
    <string name="robert">Robert</string>
    <string name="last_name">Last Name</string>
    <string name="muriithi">Muriithi</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="delete_account">Delete Account</string>
    <string name="this_action_will_delete_your_account_and_all_your_data_and_you_will_no_longer_be_able_to_access_your_account_this_action_cannot_be_undone">This action will delete your account and all your data and you will no longer be able to access your account. This action cannot be undone.</string>
    <string name="save">Save</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="notifications_will_help_you_be_updated_of_your_posted_ads_and_other_important_information_nturn_the_switch_on_to_receive_push_notifications">Notifications will help you be updated of your posted ads and other important information.\nTurn the switch on to receive push notifications.</string>
    <string name="receive_push_notifications">Receive push notifications</string>
    <string name="account_details">Account Details</string>
    <string name="shop_category">Shop Category</string>
    <string name="step_1_of_2">Step 1 of 2</string>
    <string name="shop_details">Shop Details</string>
    <string name="shop_name">Shop name</string>
    <string name="shop_description">Shop Description</string>
    <string name="shop_website">Website(optional)</string>
    <string name="phone_number_optional">Phone Number (Optional)</string>
    <string name="location">Location</string>
    <string name="upload_business_logo">Upload Business Logo</string>
    <string name="create_shop">Create Shop</string>
    <string name="farm_inputs_stores">Farm inputs stores</string>
    <string name="other_stores">Other Stores</string>
    <string name="view_all">View all</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="add_details">Add Details</string>
    <string name="post_ad">Post Ad</string>
    <string name="ad_details">Ad Details</string>
    <string name="add_post_image">Add post image</string>
    <string name="ad_title">Ad Name</string>
    <string name="ad_type">Type</string>
    <string name="specific_location">Specific Location</string>
    <string name="item_description">Item description</string>
    <string name="price">Price</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string-array name="electronics">
        <item>Accessories and supplies for electronics</item>
        <item>Audio and music equipment</item>
        <item>Computer accessories</item>
        <item>Computer Hardware</item>
        <item>Computer monitors</item>
        <item>headphones</item>
        <item>laptops and computers</item>
        <item>networking products</item>
        <item>photo and video cameras</item>
        <item>printers and scanners</item>
        <item>security and surveillance</item>
        <item>software</item>
        <item>tv and dvd equipment</item>
        <item>video game consoles</item>
        <item>video games</item>

    </string-array>
    <string-array name="agriculture">
        <item>Farm machinery and equipment</item>
        <item>Feeds supplements and seeds</item>
        <item>Livestock and poultry</item>
        <item>Meals and drinks</item>
    </string-array>
    <string-array name="animals">
        <item>Birds</item>
        <item>Cats and Kittens</item>
        <item>Dogs and puppies</item>
        <item>Fish</item>
        <item>Other Animals</item>
        <item>Pets accessories</item>
        <item>Reptile</item>
    </string-array>
    <string-array name="babies">
        <item>Babies and kids accessories</item>
        <item>Baby and Child care</item>
        <item>Children clothing</item>
        <item>Children furniture</item>
        <item>Children gear and safety</item>
        <item>Children shoes</item>
        <item>Maternity and pregnancy</item>
        <item>Prams and strollers</item>
        <item>Toys</item>
    </string-array>
    <string-array name="equipment">
        <item>Industrial ovens</item>
        <item>Manufacturing equipment</item>
        <item>Manufacturing materials</item>
        <item>Medical supplies and equipment</item>
        <item>Printing equipment</item>
        <item>Restaurant and catering equipment</item>
        <item>Safetywear and equipment</item>
        <item>Salon equipment</item>
        <item>Stationery</item>
        <item>Store Equipment</item>
    </string-array>
    <string-array name="health">
        <item>Bath and body</item>
        <item>Fragrance</item>
        <item>Hair beauty</item>
        <item>Makeup</item>
        <item>Sexual wellness</item>
        <item>Skin care</item>
        <item>Tobacco accessories</item>
        <item>Tools and accessories</item>
        <item>Vitamins and supplements</item>
    </string-array>
    <string-array name="furniture">
        <item>Furniture</item>
        <item>Garden</item>
        <item>Home Accessories</item>
        <item>Home Appliances</item>
        <item>Kitchen and dining</item>
        <item>Kitchen Appliances</item>
    </string-array>
    <string-array name="mobile">
        <item>Accessories for mobile phones and tablets</item>
        <item>Mobile phones</item>
        <item>Smart watches and trackers</item>
        <item>Tablets</item>
    </string-array>
    <string-array name="property">
        <item>Commercial property for rent</item>
        <item>CCommercial property for sale</item>
        <item>Event centres venues and workstations</item>
        <item>Houses and apartments for rent</item>
        <item>Houses and apartments for sale</item>
        <item>Land and plot for sale</item>
        <item>Land and plot for rent</item>
        <item>Short let</item>

    </string-array>
    <string-array name="repair">
        <item>Building materials</item>
        <item>Doors</item>
        <item>Electrical equipment</item>
        <item>Electrical hand tools</item>
        <item>Hand tools</item>
        <item>Measuring and layout tools</item>
        <item>Other repair and construction items</item>
        <item>Plumbing and water supply</item>
        <item>Solar energy</item>
        <item>Windows</item>
    </string-array>
    <string-array name="services">
        <item>Automotive services</item>
        <item>Building and trades services</item>
        <item>Chauffeur and airport transfer services</item>
        <item>Childcare and education services</item>
        <item>Classes and courses</item>
        <item>Cleaning services</item>
        <item>Computer and IT services</item>
        <item>DJ and entertainment services</item>
        <item>Fitness and personal training services</item>
        <item>Health and beauty services</item>
        <item>Landscaping and gardening services</item>
        <item>Legal services</item>
        <item>Logistics services</item>
        <item>Manufacturing services</item>
        <item>Other services</item>
        <item>Party and events catering services</item>
        <item>Pets services</item>
        <item>Photography and video services</item>
        <item>Printing services</item>
        <item>Recruitment services</item>
        <item>Repair services</item>
        <item>Tax and financial services</item>
        <item>Travel agents and tours</item>
        <item>Wedding venues and services</item>
    </string-array>
    <string-array name="sports">
        <item>Arts and crafts</item>
        <item>Books and games</item>
        <item>CDs and DVDs</item>
        <item>Camping gear</item>
        <item>Musical instruments and gear</item>
        <item>Sports Equipment</item>
    </string-array>
</resources>