<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="dev.robert.bagelly.ui.fragments.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash" >
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="dev.robert.bagelly.ui.fragments.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/shopsFragment"
        android:name="dev.robert.bagelly.ui.fragments.shops.ShopsFragment"
        android:label="Shops"
        tools:layout="@layout/fragment_shops" />
    <fragment
        android:id="@+id/sellFragment"
        android:name="dev.robert.bagelly.ui.fragments.sell.SellFragment"
        android:label="@string/sell"
        tools:layout="@layout/fragment_sell" >
        <action
            android:id="@+id/action_sellFragment_to_sellFragment2"
            app:destination="@id/sellFragment2" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="dev.robert.bagelly.ui.fragments.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_myAccountFragment"
            app:destination="@id/myAccountFragment" />
        <action
            android:id="@+id/action_profileFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="dev.robert.bagelly.ui.fragments.favorites.FavoritesFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorites" />
    <dialog
        android:id="@+id/signInFragment"
        android:name="dev.robert.bagelly.ui.fragments.auth.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="dev.robert.bagelly.ui.fragments.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/sellFragment2"
        android:name="dev.robert.bagelly.ui.fragments.sell.SellFragment2"
        android:label="fragment_sell2"
        tools:layout="@layout/fragment_sell2" >
        <argument
            android:name="sell_category"
            app:argType="dev.robert.bagelly.model.SellCategory" />
    </fragment>
    <fragment
        android:id="@+id/myAccountFragment"
        android:name="dev.robert.bagelly.ui.fragments.account.MyAccountFragment"
        android:label="fragment_my_account"
        tools:layout="@layout/fragment_my_account" >
        <action
            android:id="@+id/action_myAccountFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="dev.robert.bagelly.ui.fragments.account.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="dev.robert.bagelly.ui.fragments.settings.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>